--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,12 +35,12 @@ jobs:
             docker-compose --version
             # Clone the project repository to the EC2 instance
             cd /home/ubuntu/
-            if [ ! -d "fastapi-book-project" ]; then
-              git clone https://github.com/noxxspring/fastapi-book-project.git
+            if [ ! -d "hng-12-stage-2-task-fastapi-book-project-python" ]; then
+              git clone https://github.com/dyagzy/hng-12-stage-2-task-fastapi-book-project-python.git
             else
-              cd fastapi-book-project
+              cd hng-12-stage-2-task-fastapi-book-project-python
               git pull origin main  # Pull latest changes from the main branch
             fi
             # Navigate to the project folder and build/restart Docker containers
-            cd /home/ubuntu/fastapi-book-project/
+            cd /home/ubuntu/hng-12-stage-2-task-fastapi-book-project-python/
             sudo docker-compose up -d --build # Rebuild and start containers in detached mode
